[package]
name = "github-status-bot"
version = "0.1.0"
authors = ["Hung-I Wang <whygowe+for-git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
rusqlite = "0.24"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
futures = "0.3"
anyhow = "1.0"
serde = ""
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
